@@ -40,9 +40,19 @@ class ViewCalendar extends freemedCalendarModule {
 	function view () {
 		reset ($GLOBALS);
 		while (list($k, $v)=each($GLOBALS)) global $$k;
-		
-		if (!$year) $year = date("Y");
-		if (!$month) $month = date("m");
+
+		//echo "pat $current_patient<BR>";
+		if (!$jumpdate)
+			$jumpdate = $cur_date;
+
+		if (isset($jumpdate_y))
+			$jumpdate = fm_date_assemble("jumpdate");
+
+		//echo "jumpdate $jumpdate<BR>";
+
+		$year  = substr($jumpdate,0,4);
+		$month = substr($jumpdate,5,2);
+		$day   = substr($jumpdate,8,2);
 
 		$this->month($month,$year);
 		echo "<CENTER><B>Calendar For: $this->month_name, $this->year</B></CENTER><br>\n";
@@ -52,16 +62,30 @@ class ViewCalendar extends freemedCalendarModule {
                       "row_align" => "left" , "row_valign" => "top" ,
                       "font_size" => "-1") );
 
+		$nextdate = $this->nextyear."-".$this->nextmonth."-01";
+		$prevdate = $this->prevyear."-".$this->prevmonth."-01";
+
+		// prev  and next
 		echo "<CENTER>";
 		echo "<A HREF=\"$this->page_name?_auth=".prepare($_auth).
-			"&action=view&module=$module&month=$this->prevmonth&year=$this->prevyear\">Prev</A>";
+			"&action=view&module=$module&jumpdate=$prevdate\">Prev</A>";
 		echo "&nbsp;";
 		echo "<A HREF=\"$this->page_name?_auth=".prepare($_auth).
-			"&action=view&module=$module&month=$this->nextmonth&year=$this->nextyear\">Next</A>";
+			"&action=view&module=$module&jumpdate=$nextdate\">Next</A>";
 		echo "</CENTER>";
 
-		
+		// allow jumping to any year or month
+		echo "<CENTER>";
+		echo "<FORM ACTION=\"$this->page_name\" METHOD=POST>".
+			 "<INPUT TYPE=HIDDEN NAME=\"module\" VALUE=\"".prepare($module)."\">".
+			 "<INPUT TYPE=HIDDEN NAME=\"_auth\" VALUE=\"".prepare($_auth)."\">".
+			 fm_date_entry("jumpdate").
+			 "<INPUT TYPE=SUBMIT VALUE=\""._("Go")."\">".
+			 "</FORM></CENTER>";
 
+		echo "<CENTER>";
+		echo "<A HREF=\"calendar.php?$_auth\">"._("Menu")."</A>";
+		echo "</CENTER>";
 
 	} // end function module->view
 
@@ -70,6 +94,7 @@ class ViewCalendar extends freemedCalendarModule {
 		while (list($k, $v)=each($GLOBALS)) global $$k;
 	} // end function ViewCalendar->form
 
+	// display the pop window when an event is clicked on the calendar
 	function display () {
 		reset ($GLOBALS);
 		while (list($k, $v)=each($GLOBALS)) global $$k;
